2018-01-14  Bruno Haible  <bruno@clisp.org>

	Fix compilation error on Linux/mipsn32.
	* makemake.in: On mipsn32 platforms, use ari_asm_mips.d and
	sp_asm_mips.d.
	* arilev1.d: On mipsn32 platforms, include ari_asm_mips.c, not
	ari_asm_mips64.c.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Fix failure of the builds with -DWIDE on Linux/mips (o32 ABI).
	* makemake.in: When compiling with GCC for Linux/mips and -DWIDE,
	reduce optimizations.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/alpha.
	* Makefile.devel (multibuild-linux-alpha): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/alpha, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Fix a bug in the optimizations for SPARC64.
	* arilev0.d (mulu16): Cast the operands from uint16 to uint32, to force
	a zero-extend before the asm-coded instructions.

2018-01-13  Bruno Haible  <bruno@clisp.org>

	Improve framepointerp in GENERIC64C_HEAPCODES model.
	* lispbibl.d (framepointerp) [GENERIC64C_HEAPCODES]: Correct bit mask.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on GNU/kFreeBSD/x86_64.
	* Makefile.devel (multibuild-freebsd-gnu-x86_64): Enable all build
	variants.
	* makemake.in (XCFLAGS): For GNU/kFreeBSD/x86_64, enable all
	optimizations except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/sparc64.
	* Makefile.devel (multibuild-linux-sparc64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/sparc64, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/sparc.
	* Makefile.devel (multibuild-linux-sparc): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/sparc, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/powerpc64le.